# 2.03.03 (42186) Jul 12, 2010
7/12/10 dev version before starting major changes on dipole model
7/12/10 #2236, cleanup DiploleMagnet before I start major changes: remove dead code, fix comments to reflect reality 
7/7/10 test app for Mike Dubson's new numerical dipole model
# 2.03.02 (39630) Apr 5, 2010
4/5/10 dev version for Mike Dubson to test
4/5/10 #2236, add developer control for "B-field inside/outside transition factor"
# 2.03.01 (39591) Apr 1, 2010
4/1/10 dev version for Mike Dubson to test his fix for #2236
4/1/10 #2236, use new b-field inside algorithm for dipole magnet, adjust FUDGE_FACTOR using test app
4/1/10 #2236, implement new algorithms for b-field inside dipole magnet, but continue to use old algorithm
# 2.03.00 (37994) Jan 9, 2010
1/9/10 public version for milestone "full redeploy, 2010 Q1"
# 2.02.01 (37349) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 2.02.00 (30610) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30609
# 2.01.08 (29968) Mar 27, 2009
3/27/09 #1526, incorporate Romanian sim translation
# 2.01.07 (29916) Mar 26, 2009
3/26/09 #1526, this version to be used for Romanian translations
# 2.01.06 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
3/12/09 #1453, remove unused strings from English localization file
# 2.01.05 (28789) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
# 2.01.04 (28643) Feb 17, 2009
deploy dev version for testing of #721 by third party
2/17/09 - #721, calibrate emf scale using Kathy's values
12/21/08 - #1014, use new resistor image created by Noah P.
# 2.01.03 (26579) 12/04/08
12/4/08 - add "EMF scale" dev control to make it easier to calibrate after #721
12/4/08 - fix #721, use "effective area" of coil when computing emf
12/4/08 - add constants for developer controls, to make future adjustments easier