@@ -109,5 +109,11 @@ VoltmeterGraphic.title                 =voltage
 # Turbine graphic
 TurbineGraphic.rpm                     =RPM
 
+#-------------------------------------------------------------------------------
+# Messages
+#-------------------------------------------------------------------------------
+
+error.cannotFindBarMagnetFiles=Cannot find bar magnet model files. EXITING.
+
 #===============================================================================
 # end of file
