@@ -1,19 +1,16 @@
-/* Copyright 2004-2008, University of Colorado */
+/* Copyright 2004-2010, University of Colorado */
 
 package edu.colorado.phet.faraday.model;
 
 
 /**
  * BarMagnet is the model of a bar magnet.
- * It is derived from the DipoleMagnet model.
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
- * @version $Revision$
  */
-public class BarMagnet extends DipoleMagnet {
+public class BarMagnet extends NumericalBarMagnet {
     
     public BarMagnet() {
         super();
     }
-
 }
