@@ -1,3 +1,5 @@
+7/14/10 #2236, first pass at grid-file model for bar magnet
+7/14/10 #2236, remove developer controls related to dipole magnet model, since we're replacing it
 # 2.03.03 (42186) Jul 12, 2010
 7/12/10 dev version before starting major changes on dipole model
 7/12/10 #2236, cleanup DiploleMagnet before I start major changes: remove dead code, fix comments to reflect reality 
